Clean up, complete unit tests for account entity